Fixed bug #40899 (memory leak when nesting list())